Projeto/final2/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> program_heading ; block .
Rule 2     program_heading -> PROGRAM ID ( id_list )
Rule 3     program_heading -> PROGRAM ID
Rule 4     block -> const_part procfunc_part var_part compound_statement
Rule 5     const_part -> <empty>
Rule 6     const_part -> CONST const_list
Rule 7     const_list -> const_def ;
Rule 8     const_list -> const_list const_def ;
Rule 9     const_def -> ID = constant
Rule 10    constant -> sign INT
Rule 11    constant -> INT
Rule 12    constant -> sign REAL
Rule 13    constant -> REAL
Rule 14    constant -> CHAR
Rule 15    constant -> STRING
Rule 16    constant -> ID
Rule 17    constant -> TRUE
Rule 18    constant -> FALSE
Rule 19    sign -> +
Rule 20    sign -> -
Rule 21    var_part -> <empty>
Rule 22    var_part -> VAR var_list
Rule 23    var_list -> var_dec ;
Rule 24    var_list -> var_list var_dec ;
Rule 25    var_dec -> id_list : tipo
Rule 26    id_list -> ID
Rule 27    id_list -> ID , id_list
Rule 28    tipo -> ID
Rule 29    tipo -> new_type
Rule 30    new_type -> enumerated_type
Rule 31    new_type -> subrange_type
Rule 32    new_type -> array_type
Rule 33    enumerated_type -> ( id_list )
Rule 34    subrange_type -> constant DOTDOT constant
Rule 35    array_type -> ARRAY [ ordinal_type_list ] OF tipo
Rule 36    ordinal_type -> enumerated_type
Rule 37    ordinal_type -> subrange_type
Rule 38    ordinal_type -> ID
Rule 39    ordinal_type_list -> ordinal_type
Rule 40    ordinal_type_list -> ordinal_type_list , ordinal_type
Rule 41    procfunc_part -> <empty>
Rule 42    procfunc_part -> procfunc_part proc_dec
Rule 43    procfunc_part -> procfunc_part func_dec
Rule 44    proc_dec -> proc_heading ; block ;
Rule 45    func_dec -> func_heading ; block ;
Rule 46    proc_heading -> PROCEDURE ID
Rule 47    proc_heading -> PROCEDURE ID ( param_list )
Rule 48    func_heading -> FUNCTION ID : ID
Rule 49    func_heading -> FUNCTION ID ( param_list ) : ID
Rule 50    param_list -> param
Rule 51    param_list -> param_list ; param
Rule 52    param -> id_list : ID
Rule 53    param -> VAR id_list : ID
Rule 54    var_access -> ID var_suffix
Rule 55    var_suffix -> <empty>
Rule 56    var_suffix -> [ expr_list ] var_suffix
Rule 57    expr_list -> expr
Rule 58    expr_list -> expr_list , expr
Rule 59    expr -> simple_expr
Rule 60    expr -> simple_expr relation_op simple_expr
Rule 61    simple_expr -> term term_sequence
Rule 62    simple_expr -> sign term term_sequence
Rule 63    term -> factor factor_sequence
Rule 64    term_sequence -> <empty>
Rule 65    term_sequence -> add_op term term_sequence
Rule 66    factor_sequence -> <empty>
Rule 67    factor_sequence -> mul_op factor factor_sequence
Rule 68    factor -> var_access
Rule 69    factor -> INT
Rule 70    factor -> REAL
Rule 71    factor -> CHAR
Rule 72    factor -> STRING
Rule 73    factor -> ID ( expr_list )
Rule 74    factor -> ( expr )
Rule 75    factor -> NOT factor
Rule 76    factor -> TRUE
Rule 77    factor -> FALSE
Rule 78    add_op -> +
Rule 79    add_op -> -
Rule 80    add_op -> OR
Rule 81    mul_op -> *
Rule 82    mul_op -> /
Rule 83    mul_op -> DIV
Rule 84    mul_op -> MOD
Rule 85    mul_op -> AND
Rule 86    relation_op -> =
Rule 87    relation_op -> NE
Rule 88    relation_op -> LT
Rule 89    relation_op -> GT
Rule 90    relation_op -> LE
Rule 91    relation_op -> GE
Rule 92    compound_statement -> BEGIN statement_list END
Rule 93    statement_list -> statement
Rule 94    statement_list -> statement_list ; statement
Rule 95    statement -> <empty>
Rule 96    statement -> assignment_statement
Rule 97    statement -> proc_statement
Rule 98    statement -> read_statement
Rule 99    statement -> write_statement
Rule 100   statement -> labeled_statement
Rule 101   statement -> compound_statement
Rule 102   statement -> if_statement
Rule 103   statement -> while_statement
Rule 104   statement -> for_statement
Rule 105   assignment_statement -> var_access ASSIGN expr
Rule 106   proc_statement -> ID
Rule 107   proc_statement -> ID ( expr_list )
Rule 108   labeled_statement -> INT : statement
Rule 109   read_statement -> READ ( var_access_list )
Rule 110   read_statement -> READLN
Rule 111   read_statement -> READLN ( var_access_list )
Rule 112   var_access_list -> var_access
Rule 113   var_access_list -> var_access_list , var_access
Rule 114   write_statement -> WRITE ( write_list )
Rule 115   write_statement -> WRITELN
Rule 116   write_statement -> WRITELN ( write_list )
Rule 117   write_list -> write_param
Rule 118   write_list -> write_list , write_param
Rule 119   write_param -> expr
Rule 120   write_param -> expr : expr
Rule 121   write_param -> expr : expr : expr
Rule 122   if_statement -> IF expr THEN statement
Rule 123   if_statement -> IF expr THEN statement ELSE statement
Rule 124   while_statement -> WHILE expr DO statement
Rule 125   for_statement -> FOR ID ASSIGN expr TO expr DO statement
Rule 126   for_statement -> FOR ID ASSIGN expr DOWNTO expr DO statement

Terminals, with rules where they appear

(                    : 2 33 47 49 73 74 107 109 111 114 116
)                    : 2 33 47 49 73 74 107 109 111 114 116
*                    : 81
+                    : 19 78
,                    : 27 40 58 113 118
-                    : 20 79
.                    : 1
/                    : 82
:                    : 25 48 49 52 53 108 120 121 121
;                    : 1 7 8 23 24 44 44 45 45 51 94
=                    : 9 86
AND                  : 85
ARRAY                : 35
ASSIGN               : 105 125 126
BEGIN                : 92
CHAR                 : 14 71
CONST                : 6
DIV                  : 83
DO                   : 124 125 126
DOTDOT               : 34
DOWNTO               : 126
ELSE                 : 123
END                  : 92
FALSE                : 18 77
FOR                  : 125 126
FUNCTION             : 48 49
GE                   : 91
GT                   : 89
ID                   : 2 3 9 16 26 27 28 38 46 47 48 48 49 49 52 53 54 73 106 107 125 126
IF                   : 122 123
INT                  : 10 11 69 108
LE                   : 90
LT                   : 88
MOD                  : 84
NE                   : 87
NOT                  : 75
OF                   : 35
OR                   : 80
PROCEDURE            : 46 47
PROGRAM              : 2 3
READ                 : 109
READLN               : 110 111
REAL                 : 12 13 70
STRING               : 15 72
THEN                 : 122 123
TO                   : 125
TRUE                 : 17 76
VAR                  : 22 53
WHILE                : 124
WRITE                : 114
WRITELN              : 115 116
[                    : 35 56
]                    : 35 56
error                : 

Nonterminals, with rules where they appear

add_op               : 65
array_type           : 32
assignment_statement : 96
block                : 1 44 45
compound_statement   : 4 101
const_def            : 7 8
const_list           : 6 8
const_part           : 4
constant             : 9 34 34
enumerated_type      : 30 36
expr                 : 57 58 74 105 119 120 120 121 121 121 122 123 124 125 125 126 126
expr_list            : 56 58 73 107
factor               : 63 67 75
factor_sequence      : 63 67
for_statement        : 104
func_dec             : 43
func_heading         : 45
id_list              : 2 25 27 33 52 53
if_statement         : 102
labeled_statement    : 100
mul_op               : 67
new_type             : 29
ordinal_type         : 39 40
ordinal_type_list    : 35 40
param                : 50 51
param_list           : 47 49 51
proc_dec             : 42
proc_heading         : 44
proc_statement       : 97
procfunc_part        : 4 42 43
program              : 0
program_heading      : 1
read_statement       : 98
relation_op          : 60
sign                 : 10 12 62
simple_expr          : 59 60 60
statement            : 93 94 108 122 123 123 124 125 126
statement_list       : 92 94
subrange_type        : 31 37
term                 : 61 62 65
term_sequence        : 61 62 65
tipo                 : 25 35
var_access           : 68 105 112 113
var_access_list      : 109 111 113
var_dec              : 23 24
var_list             : 22 24
var_part             : 4
var_suffix           : 54 56
while_statement      : 103
write_list           : 114 116 118
write_param          : 117 118
write_statement      : 99

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . program_heading ; block .
    (2) program_heading -> . PROGRAM ID ( id_list )
    (3) program_heading -> . PROGRAM ID

    PROGRAM         shift and go to state 3

    program                        shift and go to state 1
    program_heading                shift and go to state 2

state 1

    (0) S' -> program .



state 2

    (1) program -> program_heading . ; block .

    ;               shift and go to state 4


state 3

    (2) program_heading -> PROGRAM . ID ( id_list )
    (3) program_heading -> PROGRAM . ID

    ID              shift and go to state 5


state 4

    (1) program -> program_heading ; . block .
    (4) block -> . const_part procfunc_part var_part compound_statement
    (5) const_part -> .
    (6) const_part -> . CONST const_list

    VAR             reduce using rule 5 (const_part -> .)
    PROCEDURE       reduce using rule 5 (const_part -> .)
    FUNCTION        reduce using rule 5 (const_part -> .)
    BEGIN           reduce using rule 5 (const_part -> .)
    CONST           shift and go to state 8

    block                          shift and go to state 6
    const_part                     shift and go to state 7

state 5

    (2) program_heading -> PROGRAM ID . ( id_list )
    (3) program_heading -> PROGRAM ID .

    (               shift and go to state 9
    ;               reduce using rule 3 (program_heading -> PROGRAM ID .)


state 6

    (1) program -> program_heading ; block . .

    .               shift and go to state 10


state 7

    (4) block -> const_part . procfunc_part var_part compound_statement
    (41) procfunc_part -> .
    (42) procfunc_part -> . procfunc_part proc_dec
    (43) procfunc_part -> . procfunc_part func_dec

    VAR             reduce using rule 41 (procfunc_part -> .)
    PROCEDURE       reduce using rule 41 (procfunc_part -> .)
    FUNCTION        reduce using rule 41 (procfunc_part -> .)
    BEGIN           reduce using rule 41 (procfunc_part -> .)

    procfunc_part                  shift and go to state 11

state 8

    (6) const_part -> CONST . const_list
    (7) const_list -> . const_def ;
    (8) const_list -> . const_list const_def ;
    (9) const_def -> . ID = constant

    ID              shift and go to state 14

    const_list                     shift and go to state 12
    const_def                      shift and go to state 13

state 9

    (2) program_heading -> PROGRAM ID ( . id_list )
    (26) id_list -> . ID
    (27) id_list -> . ID , id_list

    ID              shift and go to state 15

    id_list                        shift and go to state 16

state 10

    (1) program -> program_heading ; block . .

    $end            reduce using rule 1 (program -> program_heading ; block . .)


state 11

    (4) block -> const_part procfunc_part . var_part compound_statement
    (42) procfunc_part -> procfunc_part . proc_dec
    (43) procfunc_part -> procfunc_part . func_dec
    (21) var_part -> .
    (22) var_part -> . VAR var_list
    (44) proc_dec -> . proc_heading ; block ;
    (45) func_dec -> . func_heading ; block ;
    (46) proc_heading -> . PROCEDURE ID
    (47) proc_heading -> . PROCEDURE ID ( param_list )
    (48) func_heading -> . FUNCTION ID : ID
    (49) func_heading -> . FUNCTION ID ( param_list ) : ID

    BEGIN           reduce using rule 21 (var_part -> .)
    VAR             shift and go to state 20
    PROCEDURE       shift and go to state 23
    FUNCTION        shift and go to state 24

    var_part                       shift and go to state 17
    proc_dec                       shift and go to state 18
    func_dec                       shift and go to state 19
    proc_heading                   shift and go to state 21
    func_heading                   shift and go to state 22

state 12

    (6) const_part -> CONST const_list .
    (8) const_list -> const_list . const_def ;
    (9) const_def -> . ID = constant

    VAR             reduce using rule 6 (const_part -> CONST const_list .)
    PROCEDURE       reduce using rule 6 (const_part -> CONST const_list .)
    FUNCTION        reduce using rule 6 (const_part -> CONST const_list .)
    BEGIN           reduce using rule 6 (const_part -> CONST const_list .)
    ID              shift and go to state 14

    const_def                      shift and go to state 25

state 13

    (7) const_list -> const_def . ;

    ;               shift and go to state 26


state 14

    (9) const_def -> ID . = constant

    =               shift and go to state 27


state 15

    (26) id_list -> ID .
    (27) id_list -> ID . , id_list

    )               reduce using rule 26 (id_list -> ID .)
    :               reduce using rule 26 (id_list -> ID .)
    ,               shift and go to state 28


state 16

    (2) program_heading -> PROGRAM ID ( id_list . )

    )               shift and go to state 29


state 17

    (4) block -> const_part procfunc_part var_part . compound_statement
    (92) compound_statement -> . BEGIN statement_list END

    BEGIN           shift and go to state 31

    compound_statement             shift and go to state 30

state 18

    (42) procfunc_part -> procfunc_part proc_dec .

    VAR             reduce using rule 42 (procfunc_part -> procfunc_part proc_dec .)
    PROCEDURE       reduce using rule 42 (procfunc_part -> procfunc_part proc_dec .)
    FUNCTION        reduce using rule 42 (procfunc_part -> procfunc_part proc_dec .)
    BEGIN           reduce using rule 42 (procfunc_part -> procfunc_part proc_dec .)


state 19

    (43) procfunc_part -> procfunc_part func_dec .

    VAR             reduce using rule 43 (procfunc_part -> procfunc_part func_dec .)
    PROCEDURE       reduce using rule 43 (procfunc_part -> procfunc_part func_dec .)
    FUNCTION        reduce using rule 43 (procfunc_part -> procfunc_part func_dec .)
    BEGIN           reduce using rule 43 (procfunc_part -> procfunc_part func_dec .)


state 20

    (22) var_part -> VAR . var_list
    (23) var_list -> . var_dec ;
    (24) var_list -> . var_list var_dec ;
    (25) var_dec -> . id_list : tipo
    (26) id_list -> . ID
    (27) id_list -> . ID , id_list

    ID              shift and go to state 15

    var_list                       shift and go to state 32
    var_dec                        shift and go to state 33
    id_list                        shift and go to state 34

state 21

    (44) proc_dec -> proc_heading . ; block ;

    ;               shift and go to state 35


state 22

    (45) func_dec -> func_heading . ; block ;

    ;               shift and go to state 36


state 23

    (46) proc_heading -> PROCEDURE . ID
    (47) proc_heading -> PROCEDURE . ID ( param_list )

    ID              shift and go to state 37


state 24

    (48) func_heading -> FUNCTION . ID : ID
    (49) func_heading -> FUNCTION . ID ( param_list ) : ID

    ID              shift and go to state 38


state 25

    (8) const_list -> const_list const_def . ;

    ;               shift and go to state 39


state 26

    (7) const_list -> const_def ; .

    ID              reduce using rule 7 (const_list -> const_def ; .)
    VAR             reduce using rule 7 (const_list -> const_def ; .)
    PROCEDURE       reduce using rule 7 (const_list -> const_def ; .)
    FUNCTION        reduce using rule 7 (const_list -> const_def ; .)
    BEGIN           reduce using rule 7 (const_list -> const_def ; .)


state 27

    (9) const_def -> ID = . constant
    (10) constant -> . sign INT
    (11) constant -> . INT
    (12) constant -> . sign REAL
    (13) constant -> . REAL
    (14) constant -> . CHAR
    (15) constant -> . STRING
    (16) constant -> . ID
    (17) constant -> . TRUE
    (18) constant -> . FALSE
    (19) sign -> . +
    (20) sign -> . -

    INT             shift and go to state 43
    REAL            shift and go to state 44
    CHAR            shift and go to state 45
    STRING          shift and go to state 46
    ID              shift and go to state 40
    TRUE            shift and go to state 47
    FALSE           shift and go to state 48
    +               shift and go to state 49
    -               shift and go to state 50

    constant                       shift and go to state 41
    sign                           shift and go to state 42

state 28

    (27) id_list -> ID , . id_list
    (26) id_list -> . ID
    (27) id_list -> . ID , id_list

    ID              shift and go to state 15

    id_list                        shift and go to state 51

state 29

    (2) program_heading -> PROGRAM ID ( id_list ) .

    ;               reduce using rule 2 (program_heading -> PROGRAM ID ( id_list ) .)


state 30

    (4) block -> const_part procfunc_part var_part compound_statement .

    .               reduce using rule 4 (block -> const_part procfunc_part var_part compound_statement .)
    ;               reduce using rule 4 (block -> const_part procfunc_part var_part compound_statement .)


state 31

    (92) compound_statement -> BEGIN . statement_list END
    (93) statement_list -> . statement
    (94) statement_list -> . statement_list ; statement
    (95) statement -> .
    (96) statement -> . assignment_statement
    (97) statement -> . proc_statement
    (98) statement -> . read_statement
    (99) statement -> . write_statement
    (100) statement -> . labeled_statement
    (101) statement -> . compound_statement
    (102) statement -> . if_statement
    (103) statement -> . while_statement
    (104) statement -> . for_statement
    (105) assignment_statement -> . var_access ASSIGN expr
    (106) proc_statement -> . ID
    (107) proc_statement -> . ID ( expr_list )
    (109) read_statement -> . READ ( var_access_list )
    (110) read_statement -> . READLN
    (111) read_statement -> . READLN ( var_access_list )
    (114) write_statement -> . WRITE ( write_list )
    (115) write_statement -> . WRITELN
    (116) write_statement -> . WRITELN ( write_list )
    (108) labeled_statement -> . INT : statement
    (92) compound_statement -> . BEGIN statement_list END
    (122) if_statement -> . IF expr THEN statement
    (123) if_statement -> . IF expr THEN statement ELSE statement
    (124) while_statement -> . WHILE expr DO statement
    (125) for_statement -> . FOR ID ASSIGN expr TO expr DO statement
    (126) for_statement -> . FOR ID ASSIGN expr DOWNTO expr DO statement
    (54) var_access -> . ID var_suffix

    END             reduce using rule 95 (statement -> .)
    ;               reduce using rule 95 (statement -> .)
    ID              shift and go to state 64
    READ            shift and go to state 65
    READLN          shift and go to state 66
    WRITE           shift and go to state 67
    WRITELN         shift and go to state 68
    INT             shift and go to state 69
    BEGIN           shift and go to state 31
    IF              shift and go to state 70
    WHILE           shift and go to state 71
    FOR             shift and go to state 72

    statement_list                 shift and go to state 52
    statement                      shift and go to state 53
    assignment_statement           shift and go to state 54
    proc_statement                 shift and go to state 55
    read_statement                 shift and go to state 56
    write_statement                shift and go to state 57
    labeled_statement              shift and go to state 58
    compound_statement             shift and go to state 59
    if_statement                   shift and go to state 60
    while_statement                shift and go to state 61
    for_statement                  shift and go to state 62
    var_access                     shift and go to state 63

state 32

    (22) var_part -> VAR var_list .
    (24) var_list -> var_list . var_dec ;
    (25) var_dec -> . id_list : tipo
    (26) id_list -> . ID
    (27) id_list -> . ID , id_list

    BEGIN           reduce using rule 22 (var_part -> VAR var_list .)
    ID              shift and go to state 15

    var_dec                        shift and go to state 73
    id_list                        shift and go to state 34

state 33

    (23) var_list -> var_dec . ;

    ;               shift and go to state 74


state 34

    (25) var_dec -> id_list . : tipo

    :               shift and go to state 75


state 35

    (44) proc_dec -> proc_heading ; . block ;
    (4) block -> . const_part procfunc_part var_part compound_statement
    (5) const_part -> .
    (6) const_part -> . CONST const_list

    VAR             reduce using rule 5 (const_part -> .)
    PROCEDURE       reduce using rule 5 (const_part -> .)
    FUNCTION        reduce using rule 5 (const_part -> .)
    BEGIN           reduce using rule 5 (const_part -> .)
    CONST           shift and go to state 8

    block                          shift and go to state 76
    const_part                     shift and go to state 7

state 36

    (45) func_dec -> func_heading ; . block ;
    (4) block -> . const_part procfunc_part var_part compound_statement
    (5) const_part -> .
    (6) const_part -> . CONST const_list

    VAR             reduce using rule 5 (const_part -> .)
    PROCEDURE       reduce using rule 5 (const_part -> .)
    FUNCTION        reduce using rule 5 (const_part -> .)
    BEGIN           reduce using rule 5 (const_part -> .)
    CONST           shift and go to state 8

    block                          shift and go to state 77
    const_part                     shift and go to state 7

state 37

    (46) proc_heading -> PROCEDURE ID .
    (47) proc_heading -> PROCEDURE ID . ( param_list )

    ;               reduce using rule 46 (proc_heading -> PROCEDURE ID .)
    (               shift and go to state 78


state 38

    (48) func_heading -> FUNCTION ID . : ID
    (49) func_heading -> FUNCTION ID . ( param_list ) : ID

    :               shift and go to state 79
    (               shift and go to state 80


state 39

    (8) const_list -> const_list const_def ; .

    ID              reduce using rule 8 (const_list -> const_list const_def ; .)
    VAR             reduce using rule 8 (const_list -> const_list const_def ; .)
    PROCEDURE       reduce using rule 8 (const_list -> const_list const_def ; .)
    FUNCTION        reduce using rule 8 (const_list -> const_list const_def ; .)
    BEGIN           reduce using rule 8 (const_list -> const_list const_def ; .)


state 40

    (16) constant -> ID .

    ;               reduce using rule 16 (constant -> ID .)
    ]               reduce using rule 16 (constant -> ID .)
    ,               reduce using rule 16 (constant -> ID .)


state 41

    (9) const_def -> ID = constant .

    ;               reduce using rule 9 (const_def -> ID = constant .)


state 42

    (10) constant -> sign . INT
    (12) constant -> sign . REAL

    INT             shift and go to state 81
    REAL            shift and go to state 82


state 43

    (11) constant -> INT .

    ;               reduce using rule 11 (constant -> INT .)
    DOTDOT          reduce using rule 11 (constant -> INT .)
    ]               reduce using rule 11 (constant -> INT .)
    ,               reduce using rule 11 (constant -> INT .)


state 44

    (13) constant -> REAL .
